test/error/0014-macro.c
/*
PATTERN: macro
*/

#define X() 0

X(A)

